// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GoalTrajectoryChart characterisation (TD-612) > keeps classes and accessibility tree: empty 1`] = `
{
  "classNames": {
    "goal-trajectory-chart-empty": "items-center justify-center",
  },
  "tree": [
    "div",
    "div aria-label=Bench top load trajectory chart. Calibrating: not enough matched sessions to draw a band yet. role=img data-testid=goal-trajectory-chart-empty",
    "div",
  ],
}
`;

exports[`GoalTrajectoryChart characterisation (TD-612) > keeps classes and accessibility tree: plotted 1`] = `
{
  "classNames": {
    "goal-trajectory-chart": "",
  },
  "tree": [
    "div",
    "div data-testid=goal-trajectory-chart",
    "div aria-label=Bench top load trajectory chart. Status: On track. Committed 185 lbs, stretch 195 lbs. Latest 183 lbs at week 3. Current week, no reading yet (week 4). 1 personal record. role=img data-testid=goal-trajectory-chart-canvas",
    "svg aria-hidden=true",
    "div data-testid=goal-trajectory-chart-week-targets",
    "div",
    "div",
    "button aria-label=Week 1, 175 lbs, Plan 175 lbs role=button tabindex=0 data-testid=goal-trajectory-chart-week-target-1",
    "div",
    "div",
    "div",
    "button aria-label=Week 2, 178 lbs, Plan 177 to 179 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-2",
    "div",
    "div",
    "div",
    "button aria-label=Week 3, 183 lbs, Personal record, Plan 179 to 183 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-3",
    "div",
    "div",
    "div",
    "button aria-label=Week 4, No reading yet, Plan 181 to 187 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-4",
    "div",
    "div",
    "div",
    "button aria-label=Week 5, No reading yet, Plan 183 to 191 lbs, Deload week, Next target: 185 x 5 role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-5",
    "div",
    "div",
    "div",
    "button aria-label=Week 6, No reading yet, Plan 185 to 195 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-6",
    "div",
  ],
}
`;

exports[`GoalTrajectoryChart characterisation (TD-612) > keeps classes and accessibility tree: rights and axis 1`] = `
{
  "classNames": {
    "goal-trajectory-chart": "",
  },
  "tree": [
    "div",
    "div data-testid=goal-trajectory-chart",
    "div aria-label=Bench top load trajectory chart. Status: On track. Committed 185 lbs, stretch 195 lbs. Latest 183 lbs at week 3. 1 personal record. role=img data-testid=goal-trajectory-chart-canvas",
    "svg aria-hidden=true",
    "div data-testid=goal-trajectory-chart-week-targets",
    "div",
    "div",
    "button aria-label=Week 1, 175 lbs, Plan 175 lbs role=button tabindex=0 data-testid=goal-trajectory-chart-week-target-1",
    "div",
    "div",
    "div",
    "button aria-label=Week 2, 178 lbs, Plan 177 to 179 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-2",
    "div",
    "div",
    "div",
    "button aria-label=Week 3, 183 lbs, Personal record, Plan 179 to 183 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-3",
    "div",
    "div",
    "div",
    "button aria-label=Week 4, No reading yet, Plan 181 to 187 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-4",
    "div",
    "div",
    "div",
    "button aria-label=Week 5, No reading yet, Plan 183 to 191 lbs, Deload week role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-5",
    "div",
    "div",
    "div",
    "button aria-label=Week 6, No reading yet, Plan 185 to 195 lbs role=button tabindex=-1 data-testid=goal-trajectory-chart-week-target-6",
    "div",
  ],
}
`;
